# neural-network

./: .gitignore  README.md  stack.yaml
Backend-blashs/: Setup.hs  neural-network-blashs.cabal
Backend-blashs/Data/NeuralNetwork/Backend/: BLASHS.hs
Backend-blashs/Data/NeuralNetwork/Backend/BLASHS/: Eval.hs  LSTM.hs  Layers.hs  Optimizer.hs  Utils.hs
Backend-blashs/Data/NeuronNetwork/Backend/: BLASHS.hs
Backend-blashs/Data/NeuronNetwork/Backend/BLASHS/: Layers.hs  SIMD.hs  Utils.hs
Backend-blashs/Example/MNIST/: LICENSE  Main.hs  Parser.hs  mnist.cabal
Backend-blashs/Example/imdb/: Corpus.hs  LICENSE  Main.hs  Token.hs  imdb.cabal
Backend-blashs/Test/: Gen.hs  S1.hs  S2.hs  Utils.hs
Backend-blashs/novec/Data/NeuralNetwork/Backend/BLASHS/: SIMD.hs
Backend-blashs/novec/Data/NeuronNetwork/Backend/BLASHS/: SIMD.hs
Backend-blashs/vec128/Data/NeuralNetwork/Backend/BLASHS/: SIMD.hs
Backend-blashs/vec128/Data/NeuronNetwork/Backend/BLASHS/: SIMD.hs
Backend-blashs/vec128/cbits/: compare.ll
Backend-blashs/vec256/Data/NeuralNetwork/Backend/BLASHS/: SIMD.hs
Backend-blashs/vec256/Data/NeuronNetwork/Backend/BLASHS/: SIMD.hs
Backend-blashs/vec256/cbits/: compare.ll
Backend-blashs/vec512/Data/NeuralNetwork/Backend/BLASHS/: SIMD.hs
Backend-blashs/vec512/Data/NeuronNetwork/Backend/BLASHS/: SIMD.hs
Backend-hmatrix/: neural-network-hmatrix.cabal
Backend-hmatrix/Data/NeuralNetwork/Backend/: HMatrix.hs
Backend-hmatrix/Data/NeuralNetwork/Backend/HMatrix/: Layers.hs  Utils.hs
Backend-hmatrix/Data/NeuronNetwork/Backend/: HMatrix.hs
Backend-hmatrix/Data/NeuronNetwork/Backend/HMatrix/: Layers.hs  Utils.hs
Backend-hmatrix/cbits/: conv.c
Base/: neural-network-base.cabal
Base/Data/: NeuralNetwork.hs  NeuronNetwork.hs
Base/Data/NeuralNetwork/: Adapter.hs  Common.hs  Debug.hs  Model.hs  Stack.hs
MNIST/: Main.hs  Parser.hs  mnist.cabal
MNIST2/: Main.hs  mnist2.cabal
Utils/tensor-expression/: Setup.hs  tensor-expression.cabal
Utils/tensor-expression/src/: Optimize.hs  Prop.hs  Tensor.hs
Utils/tensor-expression/src/Data/: Tensor.hs
Utils/tensor-expression/src/Data/Tensor/: Class.hs  Compile.hs  Execute.hs  Optimize.hs  Prop.hs
Utils/tensor-expression/test/: Comp.hs  Gen.hs  Hmatrix.hs  Playground.hs  Simple.hs  simple.hs
Utils/tensor-expression/vec128/Data/Tensor/: SIMD.hs
Utils/tensor-expression/vecnone/Data/Tensor/: SIMD.hs
