name:                neural-network-base
version:             0.1.0.0
license-file:        LICENSE
author:              jason wu
maintainer:          jiasenwu@hotmail.com
homepage:            https://github.com/pierric/neural-network
bug-reports:         https://github.com/pierric/neural-network/issues
Stability:           Experimental
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.NeuralNetwork
  build-depends:       base, constraints
  default-language:    Haskell2010
