name:                mnist2
version:             0.1.0.0
license-file:        LICENSE
author:              jason wu
maintainer:          jiasenwu@hotmail.com
build-type:          Simple
cabal-version:       >=1.10

executable mnist2
  main-is:             Main.hs
  other-modules:       Parser
  build-depends:       base, neural-network-base, binary,
                       constraints, vector, bytestring, zlib, parallel, mtl,
                       wl-pprint-extras, neural-network-blashs
  default-language:    Haskell2010
