name:                tensor-expression
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pierric/neural-network
license:             BSD3
license-file:        LICENSE
author:              Jiasen Wu
maintainer:          jiasenwu@hotmail.com
copyright:           2017 Jiasen Wu
category:            AI
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tensor,
                       Prop,
                       Optimize
  build-depends:       base >= 4.7 && < 5, vector, mtl, containers, wl-pprint-extras
  default-language:    Haskell2010
  default-extensions:  GADTs, BangPatterns, TypeOperators, KindSignatures,
                       StandaloneDeriving, DeriveDataTypeable, FlexibleContexts
