name:                tensor-expression
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pierric/neural-network
license:             BSD3
license-file:        LICENSE
author:              Jiasen Wu
maintainer:          jiasenwu@hotmail.com
copyright:           2017 Jiasen Wu
category:            AI
build-type:          Custom
cabal-version:       >=1.10

custom-setup
  setup-depends:     base >= 4.7 && < 5, Cabal >= 1.24.0.0, filepath >= 1.4.0.0, directory >= 1.2.0.0

flag vec128
  Description: Enable 128-bit vector hardware instructions.
  Default:     False
  Manual:      True

library
  if flag(vec128)
    hs-source-dirs:    src, vec128
    ghc-options:       -fllvm
  else
    hs-source-dirs:    src, vecnone
  exposed-modules:     Data.Tensor,
                       Data.Tensor.Class,
                       Data.Tensor.Compile,
                       Data.Tensor.Optimize,
                       Data.Tensor.Execute,
                       Data.Tensor.Prop,
                       Data.Tensor.SIMD
  build-depends:       base >= 4.7 && < 5, vector, mtl, transformers, containers, wl-pprint-extras, ghc-prim,
                       blas-hs >= 0.1.1.0, hashable >= 1.2.5
  default-language:    Haskell2010
  default-extensions:  GADTs, BangPatterns, TypeOperators, KindSignatures, GeneralizedNewtypeDeriving,
                       StandaloneDeriving, DeriveDataTypeable, FlexibleContexts, FlexibleInstances

test-suite simple
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Simple.hs
  other-modules:      Hmatrix, Gen, Comp
  build-depends:      hspec, QuickCheck, base >= 4.7 && < 5, vector, hmatrix, tensor-expression,
                      mtl, transformers, wl-pprint-extras, syb
  default-language:   Haskell2010
  default-extensions: ScopedTypeVariables

executable playground
  hs-source-dirs:     test
  main-is:            Playground.hs
  other-modules:      Hmatrix, Gen, Comp
  build-depends:      hspec, QuickCheck, base >= 4.7 && < 5, vector, hmatrix, tensor-expression,
                      mtl, transformers, wl-pprint-extras
  default-language:   Haskell2010
  default-extensions: ScopedTypeVariables
