name:                mnist
version:             0.1.0.0
license-file:        LICENSE
license:             BSD3
author:              Jiasen Wu
maintainer:          jiasenwu@hotmail.com
Category:            AI
Synopsis:            MNIST
Description:         This is an example using neural-network.
build-type:          Simple
cabal-version:       >=1.10

executable mnist
  main-is:             Main.hs
  other-modules:       Parser
  build-depends:       base >= 4.7 && < 5, neural-network-base, binary,
                       constraints, vector, bytestring, zlib, parallel, mtl,
                       hvect, wl-pprint-extras, neural-network-blashs
  default-language:    Haskell2010
