name:                imdb
version:             0.1.0.0
license-file:        LICENSE
license:             BSD3
author:              Jiasen Wu
maintainer:          jiasenwu@hotmail.com
Category:            AI
Synopsis:            imdb
Description:         This is an example using neural-network.
build-type:          Simple
cabal-version:       >=1.10

executable imdb
  main-is:             Main.hs
  other-modules:       Corpus, Token
  build-depends:       base >= 4.7 && < 5, neural-network-base,
                       constraints, vector, mtl, filepath, directory,
                       bytestring, text, tokenize, containers,
                       wl-pprint-extras, mwc-random, hvect,
                       neural-network-blashs
  default-language:    Haskell2010
